--- a/FlixTv/Web.config
+++ b/FlixTv/Web.config
@@ -8,10 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FlixTv-20231124014644.mdf;Initial Catalog=aspnet-FlixTv-20231124014644;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+	<connectionStrings>
+		<add name="Sindesmos" connectionString= "Data Source=DESKTOP-61DUF3U\SQLEXPRESS01;Initial Catalog=FlixTv;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
