--- a/FlixTv/FlixTv.csproj
+++ b/FlixTv/FlixTv.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="MyDatabase\ApplicationDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -409,6 +410,8 @@
     <Content Include="Views\Movie\Category.cshtml" />
     <Content Include="Views\Movie\_FilterBar.cshtml" />
     <Content Include="Views\Movie\_CategoryResults.cshtml" />
+    <Content Include="Views\Movie\_MovieDetails.cshtml" />
+    <Content Include="Views\Movie\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
