--- a/FlixTv/FlixTv.csproj
+++ b/FlixTv/FlixTv.csproj
@@ -196,15 +196,14 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Filter.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Movie.cs" />
-    <Compile Include="Models\MovieTest.cs" />
-    <Compile Include="Models\Result.cs" />
+    <Compile Include="Models\Data.cs" />
     <Compile Include="MyDatabase\ApplicationDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\TestService.cs" />
+    <Compile Include="Repositories\MovieService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -423,7 +422,6 @@
     <Content Include="Views\Movie\_MovieDetails.cshtml" />
     <Content Include="Views\Movie\Details.cshtml" />
     <Content Include="Views\Movie\Search.cshtml" />
-    <Content Include="Views\Movie\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
